# forgejudge

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  eval.yml  gate.yml  pages-deploy.yml  publish-mcp.yml  regression-gate.yml  release.yml  sweep.yml
.wrangler/cache/: pages.json
dashboard/: og_card.html  render_og.mjs
dashboard/public/: 404.html  _headers  app.js  calibration.html  impressum.html  index.html  methodology.html  model-swap.html  playground.html  privacy.html  robots.txt  sitemap.xml  styles.css
dashboard/public/data/: calibration.json  leaderboard.json  runs.json
docs/: DESIGN.md
eval/: baseline_scores.json
forgejudge/: __init__.py  cli.py  types.py
forgejudge/agent/: __init__.py  critic.py  localize.py  repair.py  solver.py
forgejudge/eval/: __init__.py  calibrate.py  gate.py  judge.py  publish.py  sweep.py
forgejudge/golden/: __init__.py  build_dataset.py  harden.py  loader.py  materialize.py  mine_owned.py
forgejudge/golden/fixtures/base-convert-001/: meta.yaml
forgejudge/golden/fixtures/base-convert-001/base/: baseconv.py  test_baseconv.py
forgejudge/golden/fixtures/base-convert-001/fix/: baseconv.py
forgejudge/golden/fixtures/base-convert-001/test/: test_baseconv_bug.py
forgejudge/golden/fixtures/bitset-001/: meta.yaml
forgejudge/golden/fixtures/bitset-001/base/: bitset.py  test_bitset.py
forgejudge/golden/fixtures/bitset-001/fix/: bitset.py
forgejudge/golden/fixtures/bitset-001/test/: test_bitset_bug.py
forgejudge/golden/fixtures/csv-parser-001/: meta.yaml
forgejudge/golden/fixtures/csv-parser-001/base/: csv_parser.py  test_csv_parser.py
forgejudge/golden/fixtures/csv-parser-001/fix/: csv_parser.py
forgejudge/golden/fixtures/csv-parser-001/test/: test_csv_parser_bug.py
forgejudge/golden/fixtures/duration-001/: meta.yaml
forgejudge/golden/fixtures/duration-001/base/: duration.py  test_duration.py
forgejudge/golden/fixtures/duration-001/fix/: duration.py
forgejudge/golden/fixtures/duration-001/test/: test_duration_bug.py
forgejudge/golden/fixtures/fraction-001/: meta.yaml
forgejudge/golden/fixtures/fraction-001/base/: fraction.py  test_fraction.py
forgejudge/golden/fixtures/fraction-001/fix/: fraction.py
forgejudge/golden/fixtures/fraction-001/test/: test_fraction_bug.py
forgejudge/golden/fixtures/interval-merge-001/: meta.yaml
forgejudge/golden/fixtures/interval-merge-001/base/: intervals.py  test_intervals.py
forgejudge/golden/fixtures/interval-merge-001/fix/: intervals.py
forgejudge/golden/fixtures/interval-merge-001/test/: test_intervals_bug.py
forgejudge/golden/fixtures/jsonpath-001/: meta.yaml
forgejudge/golden/fixtures/jsonpath-001/base/: jsonpath.py  test_jsonpath.py
forgejudge/golden/fixtures/jsonpath-001/fix/: jsonpath.py
forgejudge/golden/fixtures/jsonpath-001/test/: test_jsonpath_bug.py
forgejudge/golden/fixtures/lru-cache-001/: meta.yaml
forgejudge/golden/fixtures/luhn-001/: meta.yaml
forgejudge/golden/fixtures/luhn-001/base/: luhn.py  (+1 more)
forgejudge/golden/fixtures/rate-limiter-001/: meta.yaml
forgejudge/golden/fixtures/retry-decorator-001/: meta.yaml
forgejudge/golden/fixtures/roman-numeral-001/: meta.yaml
forgejudge/golden/fixtures/rpn-eval-001/: meta.yaml
forgejudge/golden/fixtures/semver-001/: meta.yaml
forgejudge/golden/fixtures/window-stats-001/: meta.yaml
forgejudge/harness/: __init__.py  grade.py  runner_actions.py  runner_local.py  swebench_grade.py
forgejudge/llm/: __init__.py  models.yaml  router.py
forgejudge/mcp/: __init__.py  server.json  server.py
forgejudge/obs/: __init__.py  tracing.py
forgejudge/store/: __init__.py  db.py  export.py
golden/: dataset.jsonl  judge_gold.jsonl  solutions.jsonl
golden/images/: base.Dockerfile
golden/owned/owned-handbook-clean-text/: meta.yaml
golden/owned/owned-handbook-clean-text/base/: cleaning.py  test_cleaning.py
golden/owned/owned-handbook-clean-text/fix/: cleaning.py
golden/owned/owned-handbook-clean-text/test/: test_cleaning_markup_boundary.py
golden/owned/owned-handson-metrics/: meta.yaml
golden/owned/owned-handson-metrics/base/: metrics.py  test_metrics.py
golden/owned/owned-handson-metrics/fix/: metrics.py
golden/owned/owned-handson-metrics/test/: test_metrics_precision_recall.py
golden/owned/owned-raschka-tokenizer/: meta.yaml
golden/owned/owned-raschka-tokenizer/base/: test_tokenizer.py  tokenizer.py
golden/owned/owned-raschka-tokenizer/fix/: tokenizer.py
golden/owned/owned-raschka-tokenizer/test/: test_tokenizer_semicolon.py
migrations/: 001_init.sql
playground_api/: Dockerfile  README.md  app.py
tests/: conftest.py  test_cli.py  test_smoke.py  test_types.py
tests/agent/: test_critic.py  test_localize.py  test_repair.py  test_solver.py
tests/ci/: test_workflows.py
tests/eval/: test_calibrate.py  test_gate.py  test_judge.py  test_publish.py  test_sweep.py  test_sweep_cli.py
tests/golden/: test_fixtures.py  test_harden.py  test_loader.py  test_materialize.py  test_mine_owned.py  test_owned_tasks.py
tests/harness/: test_grade.py  test_runner_actions.py  test_swebench_grade.py
tests/llm/: test_router.py
tests/mcp/: test_server.py
tests/obs/: test_tracing.py
tests/playground_api/: test_guard.py
tests/store/: test_db.py  test_db_unit.py  test_export.py
(+30 files in other folders)
