[project]
name = "forgejudge"
version = "0.1.0"
description = "Open, always-on leaderboard + CI gate for autonomous coding agents — every patch sandboxed, every run traced, every regression fails the build."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ahmed Hobeishy" }]
keywords = ["swe-agent", "llm-evaluation", "observability", "ci", "leaderboard", "autonomous-agents"]
dependencies = [
    "pydantic>=2.7",
    "litellm>=1.50",
    "pyyaml>=6",
    "python-dotenv>=1",
    "gitpython>=3.1",
    "bm25s>=0.2",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "unidiff>=0.7",
]

[project.optional-dependencies]
# Heavy, phase-scoped extras — installed when their phase begins (keeps base sync fast).
harness = ["swebench>=3.0"]
obs = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "langfuse>=2.50",
]
all = ["forgejudge[harness,obs]"]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forgejudge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: end-to-end golden validation / mutation (spawns many pytest subprocesses)",
]
