[project]
name = "forgejudge"
version = "0.1.0"
description = "Open, always-on leaderboard + CI gate for autonomous coding agents — every patch sandboxed, every run traced, every regression fails the build."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ahmed Hobeishy" }]
keywords = ["swe-agent", "llm-evaluation", "observability", "ci", "leaderboard", "autonomous-agents"]
dependencies = [
    "pydantic>=2.7",
    "litellm>=1.50",
    "pyyaml>=6",
    "python-dotenv>=1",
    "gitpython>=3.1",
    "bm25s>=0.2",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "unidiff>=0.7",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.optional-dependencies]
# Heavy, phase-scoped extra — installed only for the swebench-equivalence job.
harness = ["swebench>=3.0"]
mcp = [
    "fastmcp>=3.3.1",
]
playground = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forgejudge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: end-to-end golden validation / mutation (spawns many pytest subprocesses)",
    "swebench: requires the optional 'harness' extra (official swebench grading)",
    "db: requires a Postgres/pgvector database (DATABASE_URL / FJ_LOCAL_DATABASE_URL)",
    "mcp: requires the optional 'mcp' extra (fastmcp)",
    "playground: requires the optional 'playground' extra (fastapi)",
]
